--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <!-- Header -->
     <header class="header">
       <video class="video-bg" autoplay muted loop>
-        <source src="/video/bg-video-2.mp4" type="video/mp4" />
+        <source src="./video/bg-video-2.mp4" type="video/mp4" />
       </video>
 
       <div class="header__wrapper-headline">
@@ -79,7 +79,7 @@
         <a href="/contacts.html" class="button">Kontaktiere mich</a>
       </div>
       <div class="header__wrapper__skills-img">
-        <img src="/img/card-skills.png" alt="skills" />
+        <img src="./img/card-skills.png" alt="skills" />
       </div>
     </header>
 
