--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <!-- Links -->
     <link rel="stylesheet" href="./css/main.css" />
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
   </head>
 
   <!-- Code begins here -->
@@ -18,7 +18,7 @@
     <nav class="nav">
       <div class="container">
         <div class="nav-row">
-          <a href="/index.html">
+          <a href="./index.html">
             <img
               class="logo-small"
               src="./img/icons/logo small.svg"
@@ -160,7 +160,7 @@
       </div>
     </footer>
 
-    <script src="/js/main.js">
+    <script src="./js/main.js">
     </script>
   </body>
 </html>
