--- a/contacts.html
+++ b/contacts.html
@@ -12,7 +12,7 @@
     <nav class="nav">
       <div class="container">
         <div class="nav-row">
-          <a href="/index.html">
+          <a href="./index.html">
             <img
               class="logo-small"
               src="./img/icons/logo small.svg"
