--- a/project-page1.html
+++ b/project-page1.html
@@ -17,7 +17,7 @@
     <nav class="nav">
       <div class="container">
         <div class="nav-row">
-          <a href="/index.html">
+          <a href="./index.html">
             <img
               class="logo-small"
               src="./img/icons/logo small.svg"
@@ -217,6 +217,6 @@
       </div>
     </footer>
 
-    <script src="/js/main.js"></script>
+    <script src="./js/main.js"></script>
   </body>
 </html>
