--- a/skills.html
+++ b/skills.html
@@ -12,7 +12,7 @@
     <nav class="nav">
       <div class="container">
         <div class="nav-row">
-          <a href="/index.html">
+          <a href="./index.html">
             <img
               class="logo-small"
               src="./img/icons/logo small.svg"
@@ -194,6 +194,6 @@
       </div>
     </footer>
 
-    <script src="/js/main.js"></script>
+    <script src="./js/main.js"></script>
   </body>
 </html>
