--- a/project-page1.html
+++ b/project-page1.html
@@ -39,7 +39,7 @@
 
           <ul class="nav-list">
             <li class="nav-list__item">
-              <a href="./index.html" class="nav-list__link">Projekte</a>
+              <a href="./index.html" class="nav-list__link--active">Projekte</a>
             </li>
 
             <li class="nav-list__item">
@@ -69,6 +69,7 @@
             alt=""
             class="project-details-cover"
           />
+
           <div class="project-details__desc">
             <p>umgesetzt mit<br /><em>JavaScript, Sass</em></p>
           </div>
