--- a/project-page2.html
+++ b/project-page2.html
@@ -9,6 +9,11 @@
 
     <!-- Links -->
     <link rel="stylesheet" href="./css/main.css" />
+    <!-- Fontawesome -->
+    <script
+      src="https://kit.fontawesome.com/083a91178a.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
 
   <!-- Code begins here -->
@@ -39,7 +44,7 @@
 
           <ul class="nav-list">
             <li class="nav-list__item">
-              <a href="./index.html" class="nav-list__link">Projekte</a>
+              <a href="./index.html" class="nav-list__link--active">Projekte</a>
             </li>
 
             <li class="nav-list__item">
@@ -69,6 +74,24 @@
             alt=""
             class="project-details-cover"
           />
+
+          <div class="project-details__button-wrapper">
+            <a
+              href="https://github.com/ledo9315/angelas-dance-academy"
+              target="_blank"
+              class="button button--green"
+            >
+              Github repo <i class="fa-brands fa-github"></i>
+            </a>
+            <a
+              href="https://www.angelasdanceacademy.com/index.html"
+              target="_blank"
+              class="button button--purple"
+            >
+              Webseite <i class="fa-solid fa-up-right-from-square"></i>
+            </a>
+          </div>
+
           <div class="project-details__desc">
             <p>umgesetzt mit<br /><em>JavaScript, CSS, HTML</em></p>
           </div>
