--- a/project-page3.html
+++ b/project-page3.html
@@ -9,6 +9,11 @@
 
     <!-- Links -->
     <link rel="stylesheet" href="./css/main.css" />
+    <!-- Fontawesome -->
+    <script
+      src="https://kit.fontawesome.com/083a91178a.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
 
   <!-- Code begins here -->
@@ -39,7 +44,7 @@
 
           <ul class="nav-list">
             <li class="nav-list__item">
-              <a href="./index.html" class="nav-list__link">Projekte</a>
+              <a href="./index.html" class="nav-list__link--active">Projekte</a>
             </li>
 
             <li class="nav-list__item">
@@ -69,6 +74,17 @@
             alt=""
             class="project-details-cover"
           />
+
+          <div class="project-details__button-wrapper">
+            <a
+              href="https://www.figma.com/file/npQleP139xYNbYDy8QJPrF/Audiventure?type=design&node-id=341%3A531&mode=design&t=BwzxAFvCtbwzK41m-1"
+              target="_blank"
+              class="button button--purple"
+            >
+              Figma <i class="fa-solid fa-up-right-from-square"></i>
+            </a>
+          </div>
+
           <div class="project-details__desc">
             <p>umgesetzt mit<br /><em>Figma</em></p>
           </div>
