added new buttons

--- a/project-page1.html
+++ b/project-page1.html
@@ -9,6 +9,11 @@
 
     <!-- Links -->
     <link rel="stylesheet" href="./css/main.css" />
+    <!-- Fontawesome -->
+    <script
+      src="https://kit.fontawesome.com/083a91178a.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
 
   <!-- Code begins here -->
@@ -69,6 +74,18 @@
             alt=""
             class="project-details-cover"
           />
+          <div class="project-details__button-wrapper">
+            <a
+              href="https://github.com/ledo9315/photography-masterclass"
+              target="_blank"
+              class="button button--github"
+            >
+              Github repo <i class="fa-brands fa-github"></i>
+            </a>
+            <a href="#" target="_blank" class="button button--link">
+              Webseite <i class="fa-solid fa-up-right-from-square"></i>
+            </a>
+          </div>
 
           <div class="project-details__desc">
             <p>umgesetzt mit<br /><em>JavaScript, Sass</em></p>
