--- a/project-page3.html
+++ b/project-page3.html
@@ -79,7 +79,7 @@
             <a
               href="https://www.figma.com/file/npQleP139xYNbYDy8QJPrF/Audiventure?type=design&node-id=341%3A531&mode=design&t=BwzxAFvCtbwzK41m-1"
               target="_blank"
-              class="button button--purple"
+              class="button button--link"
             >
               Figma <i class="fa-solid fa-up-right-from-square"></i>
             </a>
