--- a/project-page2.html
+++ b/project-page2.html
@@ -79,14 +79,14 @@
             <a
               href="https://github.com/ledo9315/angelas-dance-academy"
               target="_blank"
-              class="button button--green"
+              class="button button--github"
             >
               Github repo <i class="fa-brands fa-github"></i>
             </a>
             <a
               href="https://www.angelasdanceacademy.com/index.html"
               target="_blank"
-              class="button button--purple"
+              class="button button--link"
             >
               Webseite <i class="fa-solid fa-up-right-from-square"></i>
             </a>
