images in web.p format, min.css

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <!-- Required meta-tags -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <meta name="description" content="Professioneller Webentwickler aus Flensburg für ansprechende und leistungsstarke Webseiten. Expertise in HTML, CSS, JavaScript. Responsives Design, schnelle Ladezeiten, benutzerfreundliche Navigation." />
     <title>Leonid Domahalskyy</title>
 
     <!-- Links -->
-    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
   </head>
 
@@ -79,7 +79,7 @@
         <a href="/contacts.html" class="button">Kontaktiere mich</a>
       </div>
       <div class="header__wrapper__skills-img">
-        <img src="./img/card-skills.png" alt="skills" />
+        <img src="./img/card-skills.webp" alt="skills" />
       </div>
     </header>
 
@@ -92,7 +92,7 @@
           <li class="project">
             <a href="./project-page1.html">
               <img
-              src="./img/projects/projekt1.png"
+              src="./img/projects/projekt1.webp"
               alt="project_img1"
               class="project__img"
             />
@@ -102,7 +102,7 @@
           <li class="project">
             <a href="./project-page2.html">
               <img
-                src="./img/projects/projekt2.png"
+                src="./img/projects/projekt2.webp"
                 alt="project_img2"
                 class="project__img"
               />
@@ -112,7 +112,7 @@
           <li class="project">
             <a href="./project-page3.html">
               <img
-              src="./img/projects/projekt3.png"
+              src="./img/projects/projekt3.webp"
               alt="project_img3"
               class="project__img"
             />
