--- a/project-page3.html
+++ b/project-page3.html
@@ -8,7 +8,7 @@
     <title>Leonid Domahalskyy</title>
 
     <!-- Links -->
-    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
     <!-- Fontawesome -->
     <script
       src="https://kit.fontawesome.com/083a91178a.js"
@@ -70,7 +70,7 @@
         <div class="project-details">
           <h1 class="title-1">Interaktiver Hörspiel-Player Click-Dummy</h1>
           <img
-            src="./img/projects/projekt3-big.png"
+            src="./img/projects/projekt3-big.webp"
             alt=""
             class="project-details-cover"
           />
