--- a/skills.html
+++ b/skills.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Leonid Domahalskyy</title>
-    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
     <!-- Nav -->
@@ -63,7 +63,7 @@
 
         <div class="about-wrapper">
           <div class="about-image">
-            <img src="./img/portrait.jpg" alt="portrait" />
+            <img src="./img/portrait_1_11zon.webp" alt="portrait" />
           </div>
           <div class="about-text">
             <h3><em>Webentwickler</em> und <em>Designer</em> aus Flensburg</h3>
