--- a/project-page1.html
+++ b/project-page1.html
@@ -82,7 +82,11 @@
             >
               Github repo <i class="fa-brands fa-github"></i>
             </a>
-            <a href="#" target="_blank" class="button button--link">
+            <a
+              href="https://ledo9315.github.io/photography-masterclass/"
+              target="_blank"
+              class="button button--link"
+            >
               Webseite <i class="fa-solid fa-up-right-from-square"></i>
             </a>
           </div>
