--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
     <!-- Links -->
     <link rel="stylesheet" href="./css/main.min.css" />
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
+  <style>
+    @font-face {
+  font-family: 'FoundersGrotesk';
+  src: url('/fonts/FoundersGrotesk-Regular.otf') format('opentype');
+  font-display: swap; /* Hier wird festgelegt, dass der Text auf die Standard-Schriftart gewechselt wird, während die Webfont geladen wird */
+}
+
+body {
+  font-family: 'FoundersGrotesk', sans-serif;
+}
+  </style>
   </head>
 
   <!-- Code begins here -->
