--- a/project-page3.html
+++ b/project-page3.html
@@ -7,6 +7,18 @@
 
     <title>Leonid Domahalskyy</title>
 
+      <style>
+    @font-face {
+  font-family: 'FoundersGrotesk';
+  src: url('/fonts/FoundersGrotesk-Regular.otf') format('opentype');
+  font-display: swap; /* Hier wird festgelegt, dass der Text auf die Standard-Schriftart gewechselt wird, während die Webfont geladen wird */
+}
+
+body {
+  font-family: 'FoundersGrotesk', sans-serif;
+}
+  </style>
+
     <!-- Links -->
     <link rel="stylesheet" href="./css/main.min.css" />
     <!-- Fontawesome -->
