--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Professioneller Webentwickler aus Flensburg für ansprechende und leistungsstarke Webseiten. Expertise in HTML, CSS, JavaScript. Responsives Design, schnelle Ladezeiten, benutzerfreundliche Navigation." />
     <title>Leonid Domahalskyy</title>
-
     <!-- Links -->
     <link rel="stylesheet" href="./css/main.min.css" />
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
@@ -76,7 +75,7 @@
           <span><em>UI/UX</em><br />designer</span> <br />
           <span>frontend<br /><em>developer</span></em><br />
         </h1>
-        <a href="/contacts.html" class="button">Kontaktiere mich</a>
+        <a href="/contacts.html" class="button button__main">Kontaktiere mich</a>
       </div>
       <div class="header__wrapper__skills-img">
         <img src="./img/card-skills.webp" alt="skills" />
