--- a/skills.html
+++ b/skills.html
@@ -63,7 +63,7 @@
 
         <div class="about-wrapper">
           <div class="about-image">
-            <img src="./img/portrait_1_11zon.webp" alt="portrait" />
+            <img src="./img/portrait.webp" alt="portrait" />
           </div>
           <div class="about-text">
             <h3><em>Webentwickler</em> und <em>Designer</em> aus Flensburg</h3>
