--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
     <title>Leonid Domahalskyy</title>
     <!-- Links -->
     <link rel="stylesheet" href="./css/main.min.css" />
-    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
+
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#686868">
+    <meta name="msapplication-TileColor" content="#000000">
+    <meta name="theme-color" content="#000000">
   </head>
 
   <!-- Code begins here -->
@@ -79,6 +87,11 @@
       </div>
       <div class="header__wrapper__skills-img">
         <img src="./img/card-skills.webp" alt="skills" />
+      </div>
+      <div class="arrow">
+        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="86" viewBox="0 0 30 86" fill="none">
+          <path d="M17 2C17 0.895431 16.1046 0 15 0C13.8954 0 13 0.895431 13 2L17 2ZM13.5858 85.4142C14.3668 86.1953 15.6332 86.1953 16.4142 85.4142L29.1421 72.6863C29.9232 71.9052 29.9232 70.6389 29.1421 69.8579C28.3611 69.0768 27.0948 69.0768 26.3137 69.8579L15 81.1716L3.68629 69.8579C2.90524 69.0768 1.63891 69.0768 0.857864 69.8579C0.0768158 70.6389 0.0768158 71.9052 0.857864 72.6863L13.5858 85.4142ZM13 2L13 84H17L17 2L13 2Z" fill="white" fill-opacity="0.49"/>
+        </svg>
       </div>
     </header>
 
