--- a/project-page3.html
+++ b/project-page3.html
@@ -8,6 +8,16 @@
     <title>Leonid Domahalskyy</title>
     <!-- Links -->
     <link rel="stylesheet" href="./css/main.min.css" />
+
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#686868" />
+    <meta name="msapplication-TileColor" content="#000000" />
+    <meta name="theme-color" content="#000000" />
+
     <!-- Fontawesome -->
     <script
       src="https://kit.fontawesome.com/083a91178a.js"
