--- a/project-page3.html
+++ b/project-page3.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Leonid Domahalskyy</title>
+    <title>Leonid Domahalskyy Projekt Hörspiel App</title>
     <!-- Links -->
     <link rel="stylesheet" href="./css/main.min.css" />
 
@@ -23,6 +23,21 @@
       src="https://kit.fontawesome.com/083a91178a.js"
       crossorigin="anonymous"
     ></script>
+
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-FNR6GXG3S6"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-FNR6GXG3S6");
+    </script>
   </head>
 
   <!-- Code begins here -->
@@ -95,7 +110,7 @@
           </div>
 
           <div class="project-details__desc">
-            <p>umgesetzt mit<br /><em>Figma</em></p>
+            <h2>umgesetzt mit<br /><em>Figma</em></h2>
           </div>
           <div class="project-details__info-banner">
             <h2 class="project-details__info-banner__headline">
