--- a/skills.html
+++ b/skills.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Leonid Domahalskyy</title>
+    <title>Leonid Domahalskyy - Über mich</title>
     <link rel="stylesheet" href="./css/main.min.css" />
 
     <!-- Favicon -->
@@ -15,6 +15,21 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#686868" />
     <meta name="msapplication-TileColor" content="#000000" />
     <meta name="theme-color" content="#000000" />
+
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-FNR6GXG3S6"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-FNR6GXG3S6");
+    </script>
   </head>
   <body>
     <!-- Nav -->
@@ -75,7 +90,7 @@
             <img src="./img/portrait.webp" alt="portrait" />
           </div>
           <div class="about-text">
-            <h3><em>Webentwickler</em> und <em>Designer</em> aus Flensburg</h3>
+            <h2><em>Webentwickler</em> und <em>Designer</em> aus Flensburg</h2>
             <p>
               Moin! Ich bin ein leidenschaftlicher Programmierer aus dem
               malerischen Flensburg im Norden Deutschlands. Mein Wissen in der
