--- a/contacts.html
+++ b/contacts.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Freelancer portfolio</title>
+    <title>Kontakt</title>
     <link rel="stylesheet" href="./css/main.min.css" />
 
     <!-- Favicon -->
@@ -15,7 +15,23 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#686868" />
     <meta name="msapplication-TileColor" content="#000000" />
     <meta name="theme-color" content="#000000" />
+
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-FNR6GXG3S6"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-FNR6GXG3S6");
+    </script>
   </head>
+
   <body>
     <!-- Nav -->
     <nav class="nav">
@@ -69,9 +85,9 @@
     <main class="section">
       <div class="container">
         <div class="contact-wrapper">
-          <div class="contact-text">
+          <h1 class="contact-text">
             Lass uns <span>gemeinsam</span> an Projekten arbeiten.
-          </div>
+          </h1>
 
           <form class="form" action="submit_form.php" method="POST">
             <input
