--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Professioneller Webentwickler aus Flensburg für ansprechende und leistungsstarke Webseiten. Expertise in HTML, CSS, JavaScript. Responsives Design, schnelle Ladezeiten, benutzerfreundliche Navigation." />
-    <title>Leonid Domahalskyy</title>
+    <title>Leonid Domahalskyy - Webentwickler - Webdesigner - Webseite - Flensburg</title>
     <!-- Links -->
     <link rel="stylesheet" href="./css/main.min.css" />
 
     <!-- Favicon -->
+    <link rel="icon" href="favicon.ico">
     <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -17,6 +18,16 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#686868">
     <meta name="msapplication-TileColor" content="#000000">
     <meta name="theme-color" content="#000000">
+
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-FNR6GXG3S6"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-FNR6GXG3S6');
+</script>
   </head>
 
   <!-- Code begins here -->
@@ -75,10 +86,10 @@
       </video>
 
       <div class="header__wrapper-headline">
-        <h1 class="header__wrapper-headline__title">
+        <div class="header__wrapper-headline__title">
           Hey<br />
           ich bin Leonid
-        </h1>
+        </div>
         <h1 class="header__wrapper-headline__skills">
           <span><em>UI/UX</em><br />designer</span> <br />
           <span>frontend<br /><em>developer</span></em><br />
