--- a/contacts.html
+++ b/contacts.html
@@ -1,26 +1,23 @@
 <!DOCTYPE html>
 <html lang="de">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kontakt</title>
-    <link rel="stylesheet" href="./css/main.min.css" />
+    <link rel="stylesheet" href="./css/main.min.css">
 
     <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-    <link rel="manifest" href="/site.webmanifest" />
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#686868" />
-    <meta name="msapplication-TileColor" content="#000000" />
-    <meta name="theme-color" content="#000000" />
+    <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#686868">
+    <meta name="msapplication-TileColor" content="#000000">
+    <meta name="theme-color" content="#000000">
 
     <!-- Google tag (gtag.js) -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=G-FNR6GXG3S6"
-    ></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FNR6GXG3S6"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag() {
@@ -38,23 +35,11 @@
       <div class="container">
         <div class="nav-row">
           <a href="./index.html">
-            <img
-              class="logo-small"
-              src="./img/icons/logo small.svg"
-              alt="logo"
-            />
+            <img class="logo" src="./img/icons/logo.svg" alt="logo">
           </a>
           <button class="dark-mode-btn">
-            <img
-              src="./img/icons/sun.svg"
-              alt="Light mode"
-              class="dark-mode-btn__icon"
-            />
-            <img
-              src="./img/icons/moon.svg"
-              alt="Dark mode"
-              class="dark-mode-btn__icon"
-            />
+            <img src="./img/icons/sun.svg" alt="Light mode" class="dark-mode-btn__icon">
+            <img src="./img/icons/moon.svg" alt="Dark mode" class="dark-mode-btn__icon">
           </button>
 
           <ul class="nav-list">
@@ -63,19 +48,16 @@
             </li>
 
             <li class="nav-list__item">
-              <a href="./skills.html" class="nav-list__link">Über mich</a>
+              <a href="./skills.html" class="nav-list__link">&uuml;ber mich</a>
             </li>
 
             <li class="nav-list__item">
-              <a href="./contacts.html" class="nav-list__link--active"
-                >Kontakt</a
-              >
+              <a href="./contacts.html" class="nav-list__link--active">Kontakt</a>
             </li>
           </ul>
 
           <div class="hamburger">
-            <span class="bar"></span><span class="bar"></span
-            ><span class="bar"></span>
+            <span class="bar"></span><span class="bar"></span><span class="bar"></span>
           </div>
         </div>
       </div>
@@ -90,30 +72,9 @@
           </h1>
 
           <form class="form" action="submit_form.php" method="POST">
-            <input
-              type="text"
-              placeholder="Dein Name"
-              id="name"
-              name="name"
-              required
-            />
-
-            <input
-              type="email"
-              placeholder="Deine Email"
-              id="email"
-              name="email"
-              required
-            />
-
-            <textarea
-              id="message"
-              placeholder="Schreibe mir eine Nachricht"
-              name="message"
-              rows="4"
-              required
-            ></textarea>
-
+            <input type="text" placeholder="Dein Name" id="name" name="name" required>
+            <input type="email" placeholder="Deine Email" id="email" name="email" required>
+            <textarea id="message" placeholder="Schreibe mir eine Nachricht" name="message" rows="4" required></textarea>
             <button class="button" type="submit">Senden</button>
           </form>
         </div>
@@ -125,38 +86,37 @@
       <div class="container">
         <ul class="social">
           <li class="social__item">
-            <a href="https://t.me/ledo9913" target="_blank"
-              ><img src="./img/icons/telegram.svg" alt="telegram"
-            /></a>
+            <a href="https://t.me/ledo9913" target="_blank">
+              <img src="./img/icons/telegram.svg" alt="telegram">
+            </a>
           </li>
           <li class="social__item">
-            <a
-              href="https://discordapp.com/users/1016065690253406298"
-              target="_blank"
-              ><img src="./img/icons/discord.svg" alt="discord"
-            /></a>
+            <a href="https://discordapp.com/users/1016065690253406298" target="_blank">
+              <img src="./img/icons/discord.svg" alt="discord">
+            </a>
           </li>
           <li class="social__item">
-            <a href="https://dribbble.com/ledo93" target="_blank"
-              ><img src="./img/icons/dribbble.svg" alt="dribbble"
-            /></a>
+            <a href="https://dribbble.com/ledo93" target="_blank">
+              <img src="./img/icons/dribbble.svg" alt="dribbble">
+            </a>
           </li>
           <li class="social__item">
-            <a href="https://github.com/ledo9315" target="_blank"
-              ><img src="./img/icons/gitHub.svg" alt="gitHub"
-            /></a>
+            <a href="https://github.com/ledo9315" target="_blank">
+              <img src="./img/icons/gitHub.svg" alt="gitHub">
+            </a>
           </li>
           <li class="social__item">
-            <a
-              href="https://www.linkedin.com/in/leonid-domahalskyy-0a6b95206/?originalSubdomain=de"
-              target="_blank"
-              ><img src="./img/icons/linkedIn.svg" alt="linkedIn"
-            /></a>
+            <a href="https://www.linkedin.com/in/leonid-domahalskyy-0a6b95206/?originalSubdomain=de" target="_blank">
+              <img src="./img/icons/linkedIn.svg" alt="linkedIn">
+            </a>
           </li>
         </ul>
-        <div class="copyright"><p>© Leonid Domahaslkyy</p></div>
+        <div class="copyright">
+          <p>&copy; Leonid Domahalskyy</p>
+        </div>
       </div>
     </footer>
     <script src="./js/main.js"></script>
   </body>
 </html>
+
