--- a/project-page1.html
+++ b/project-page1.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./css/main.min.css" />
 
     <!-- Favicon -->
+    <link rel="icon" href="favicon.ico" />
     <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
@@ -48,8 +49,8 @@
         <div class="nav-row">
           <a href="./index.html">
             <img
-              class="logo-small"
-              src="./img/icons/logo small.svg"
+              class="logo"
+              src="./img/icons/logo.svg"
               alt="logo"
             />
           </a>
@@ -259,7 +260,7 @@
             /></a>
           </li>
         </ul>
-        <div class="copyright"><p>© Leonid Domahaslkyy</p></div>
+        <div class="copyright"><p>© Leonid Domahalskyy</p></div>
       </div>
     </footer>
 
