--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="de">
   <head>
-    <!-- Required meta-tags -->
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Professioneller Webentwickler aus Flensburg für ansprechende und leistungsstarke Webseiten. Expertise in HTML, CSS, JavaScript. Responsives Design, schnelle Ladezeiten, benutzerfreundliche Navigation." />
+    <!-- Required Meta-Tags -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Professioneller Webentwickler aus Flensburg f&uuml;r ansprechende und leistungsstarke Webseiten. Expertise in HTML, CSS, JavaScript. Responsives Design, schnelle Ladezeiten, benutzerfreundliche Navigation.">
     <title>Leonid Domahalskyy - Webentwickler - Webdesigner - Webseite - Flensburg</title>
     <!-- Links -->
-    <link rel="stylesheet" href="./css/main.min.css" />
-
+    <link rel="stylesheet" href="./css/main.min.css">
     <!-- Favicon -->
     <link rel="icon" href="favicon.ico">
     <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon.png">
@@ -18,172 +17,129 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#686868">
     <meta name="msapplication-TileColor" content="#000000">
     <meta name="theme-color" content="#000000">
-
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-FNR6GXG3S6"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-FNR6GXG3S6');
-</script>
+    <!-- Google Tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FNR6GXG3S6"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-FNR6GXG3S6');
+    </script>
   </head>
-
-  <!-- Code begins here -->
   <body>
-    <!-- Nav -->
+    <!-- Navigation -->
     <nav class="nav">
       <div class="container">
         <div class="nav-row">
           <a href="./index.html">
-            <img
-              class="logo-small"
-              src="./img/icons/logo small.svg"
-              alt="logo"
-            />
+            <img class="logo" src="./img/icons/logo.svg" alt="logo">
           </a>
-
           <button class="dark-mode-btn">
-            <img
-              src="./img/icons/sun.svg"
-              alt="Light mode"
-              class="dark-mode-btn__icon"
-            />
-            <img
-              src="./img/icons/moon.svg"
-              alt="Dark mode"
-              class="dark-mode-btn__icon"
-            />
+            <img src="./img/icons/sun.svg" alt="Light mode" class="dark-mode-btn__icon">
+            <img src="./img/icons/moon.svg" alt="Dark mode" class="dark-mode-btn__icon">
           </button>
-
           <ul class="nav-list">
             <li class="nav-list__item">
               <a href="./index.html" class="nav-list__link--active">projekte</a>
             </li>
-
             <li class="nav-list__item">
-              <a href="./skills.html" class="nav-list__link">Über mich</a>
+              <a href="./skills.html" class="nav-list__link">&uuml;ber mich</a>
             </li>
-
             <li class="nav-list__item">
               <a href="./contacts.html" class="nav-list__link">kontakt</a>
             </li>
           </ul>
-
           <div class="hamburger">
-            <span class="bar"></span><span class="bar"></span
-            ><span class="bar"></span>
+            <span class="bar"></span><span class="bar"></span><span class="bar"></span>
           </div>
         </div>
       </div>
     </nav>
-
     <!-- Header -->
     <header class="header">
       <video class="video-bg" autoplay muted loop>
-        <source src="./video/bg-video-2.mp4" type="video/mp4" />
+        <source src="./video/bg-video-2.mp4" type="video/mp4">
       </video>
-
       <div class="header__wrapper-headline">
         <div class="header__wrapper-headline__title">
-          Hey<br />
+          Hey<br>
           ich bin Leonid
         </div>
         <h1 class="header__wrapper-headline__skills">
-          <span><em>UI/UX</em><br />designer</span> <br />
-          <span>frontend<br /><em>developer</span></em><br />
+          <span><em>UI/UX</em><br>designer</span><br>
+          <span>frontend<br><em>developer</em></span><br>
         </h1>
         <a href="/contacts.html" class="button button__main">Kontaktiere mich</a>
       </div>
       <div class="header__wrapper__skills-img">
-        <img src="./img/card-skills.webp" alt="skills" />
+        <img src="./img/card-skills.webp" alt="skills">
       </div>
       <div class="arrow">
         <svg xmlns="http://www.w3.org/2000/svg" width="30" height="64" viewBox="0 0 30 64" fill="none">
-          <path d="M17 2C17 0.895431 16.1046 0 15 0C13.8954 0 13 0.895431 13 2L17 2ZM13.5858 63.4142C14.3668 64.1953 15.6332 64.1953 16.4142 63.4142L29.1421 50.6863C29.9232 49.9052 29.9232 48.6389 29.1421 47.8579C28.3611 47.0768 27.0948 47.0768 26.3137 47.8579L15 59.1716L3.68629 47.8579C2.90524 47.0768 1.63891 47.0768 0.857864 47.8579C0.0768158 48.6389 0.0768158 49.9052 0.857864 50.6863L13.5858 63.4142ZM13 2L13 62H17L17 2L13 2Z" fill="white" fill-opacity="0.49"/>
+          <path d="M17 2C17 0.895431 16.1046 0 15 0C13.8954 0 13 0.895431 13 2L17 2ZM13.5858 63.4142C14.3668 64.1953 15.6332 64.1953 16.4142 63.4142L29.1421 50.6863C29.9232 49.9052 29.9232 48.6389 29.1421 47.8579C28.3611 47.0768 27.0948 47.0768 26.3137 47.8579L15 59.1716L3.68629 47.8579C2.90524 47.0768 1.63891 47.0768 0.857864 47.8579C0.0768158 48.6389 0.0768158 49.9052 0.857864 50.6863L13.5858 63.4142ZM13 2L13 62H17L17 2L13 2Z" fill="white" fill-opacity="0.49"></path>
         </svg>
       </div>
     </header>
-
-    <!-- Main -->
+    <!-- Main-->
     <main class="section">
       <div class="container">
         <h2 class="title-1">projekte</h2>
         <ul class="projects">
-          <!-- Card 1 -->
+          <!-- Karte 1 -->
           <li class="project">
             <a href="./project-page1.html">
-              <img
-              src="./img/projects/projekt1.webp"
-              alt="project_img1"
-              class="project__img"
-            />
+              <img src="./img/projects/projekt1.webp" alt="project_img1" class="project__img">
             </a>
           </li>
-          <!-- Card 2 -->
+          <!-- Karte 2 -->
           <li class="project">
             <a href="./project-page2.html">
-              <img
-                src="./img/projects/projekt2.webp"
-                alt="project_img2"
-                class="project__img"
-              />
+              <img src="./img/projects/projekt2.webp" alt="project_img2" class="project__img">
             </a>
           </li>
-          <!-- Card 3 -->
+          <!-- Karte 3 -->
           <li class="project">
             <a href="./project-page3.html">
-              <img
-              src="./img/projects/projekt3.webp"
-              alt="project_img3"
-              class="project__img"
-            />
+              <img src="./img/projects/projekt3.webp" alt="project_img3" class="project__img">
             </a>
           </li>
         </ul>
       </div>
     </main>
-
     <!-- Footer -->
     <footer class="footer">
       <div class="container">
         <ul class="social">
           <li class="social__item">
-            <a href="https://t.me/ledo9913" target="_blank"
-              ><img src="./img/icons/telegram.svg" alt="telegram"
-            /></a>
+            <a href="https://t.me/ledo9913" target="_blank">
+              <img src="./img/icons/telegram.svg" alt="telegram">
+            </a>
           </li>
           <li class="social__item">
-            <a
-              href="https://discordapp.com/users/1016065690253406298"
-              target="_blank"
-              ><img src="./img/icons/discord.svg" alt="discord"
-            /></a>
+            <a href="https://discordapp.com/users/1016065690253406298" target="_blank">
+              <img src="./img/icons/discord.svg" alt="discord">
+            </a>
           </li>
           <li class="social__item">
-            <a href="https://dribbble.com/ledo93" target="_blank"
-              ><img src="./img/icons/dribbble.svg" alt="dribbble"
-            /></a>
+            <a href="https://dribbble.com/ledo93" target="_blank">
+              <img src="./img/icons/dribbble.svg" alt="dribbble">
+            </a>
           </li>
           <li class="social__item">
-            <a href="https://github.com/ledo9315" target="_blank"
-              ><img src="./img/icons/gitHub.svg" alt="gitHub"
-            /></a>
+            <a href="https://github.com/ledo9315" target="_blank">
+              <img src="./img/icons/gitHub.svg" alt="gitHub">
+            </a>
           </li>
           <li class="social__item">
-            <a
-              href="https://www.linkedin.com/in/leonid-domahalskyy-0a6b95206/?originalSubdomain=de"
-              target="_blank"
-              ><img src="./img/icons/linkedIn.svg" alt="linkedIn"
-            /></a>
+            <a href="https://www.linkedin.com/in/leonid-domahalskyy-0a6b95206/?originalSubdomain=de" target="_blank">
+              <img src="./img/icons/linkedIn.svg" alt="linkedIn">
+            </a>
           </li>
         </ul>
-        <div class="copyright"><p>© Leonid Domahaslkyy</p></div>
+        <div class="copyright"><p>&copy; Leonid Domahalskyy</p></div>
       </div>
     </footer>
-
-    <script src="./js/main.js">
-    </script>
+    <script src="./js/main.js"></script>
   </body>
 </html>
+
